--- a/style.scss
+++ b/style.scss
@@ -1,25 +1,38 @@
 @import "./css/reset";
 
 .calculator {
-  width: 352px;
+  width: 390px;
   background: $black;
+  padding: 19px;
+  border-radius: 40px;
 
   &__display {
     width: 100%;
+    font-size: calculator-rem(48);
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    
+    &-input {
+      background: transparent;
+      outline: transparent;
+      border: 0;
+      color: $white;
+      margin-top: 88px;
+    }
+    
+    &-result {
+      color: $light-grey;
+      margin-top: 88px;
+    }
   }
 
-  &__display-input {
-    background: transparent;
-    outline: transparent;
-    border: 0;
-    color: $white;
-  }
-
-  &__display-result {
-    color: $light-grey;
+  &__callback {
+    margin-top: 20px;
   }
 
   &__buttons {
+    margin-top: 20px;
     &--button {
       background: $grey;
       color: $white;
@@ -65,4 +78,8 @@
     width: 100%;
     margin-bottom: 20px;
   }
+}
+
+hr {
+  margin-top: 20px;
 }
