--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,9 @@
     align-items: end;
     
     &-input {
+      font-size: calculator-rem(48);
+      width: 100%;
+      text-align: center;
       background: transparent;
       outline: transparent;
       border: 0;
