mudança de posição do input

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ table {
 .calculator__display-input {
   font-size: 3rem;
   width: 100%;
-  text-align: center;
+  text-align: end;
   background: transparent;
   outline: transparent;
   border: 0;
