--- a/style.scss
+++ b/style.scss
@@ -16,7 +16,7 @@
     &-input {
       font-size: calculator-rem(48);
       width: 100%;
-      text-align: center;
+      text-align: end;
       background: transparent;
       outline: transparent;
       border: 0;
